@@ -28,13 +28,13 @@
  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
 -->
-<title>SunSpider JavaScript Benchmark</title>
+<title>SunSpider 0.9.1 JavaScript Benchmark</title>
 <link rel="stylesheet" href="sunspider.css">
 </head>
 
 <body>
 
-<h2><span id="logo">&#x2600;</span>SunSpider JavaScript Benchmark</h2>
+<h2><span id="logo">&#x2600;</span>SunSpider 0.9.1 JavaScript Benchmark</h2>
 
 <p>This is SunSpider, a JavaScript benchmark. This benchmark tests the
 core JavaScript language only, not the DOM or other browser APIs. It
