@@ -29,18 +29,21 @@
  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
 -->
 
-<title>SunSpider JavaScript Benchmark</title>
+<title>SunSpider 0.9.1 JavaScript Benchmark</title>
 <link rel="stylesheet" href="sunspider.css">
 </head>
 
 <body>
 
-<h2><span id="logo">&#x2600;</span>SunSpider JavaScript Benchmark</h2>
+<h2><span id="logo">&#x2600;</span>SunSpider 0.9.1 JavaScript Benchmark</h2>
 
 <p>This is SunSpider, a JavaScript benchmark. This benchmark tests the
 core JavaScript language only, not the DOM or other browser APIs. It
 is designed to compare different versions of the same browser, and
-different browsers to each other. This page lists all versions:</p>
+different browsers to each other.</p>
+
+<p>This version of the harness is 0.9.1. This page lists all versions
+of the test content:</p>
 
 <ul>
 <li><a href="sunspider-0.9/driver.html">Version 0.9</a></li>
