@@ -29,14 +29,14 @@
  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
 -->
 
-<title>SunSpider JavaScript Benchmark (In Progress...)</title>
+<title>SunSpider 0.9.1 JavaScript Benchmark (@SUITE@ test suite - In Progress...)</title>
 <link rel="stylesheet" href="../sunspider.css">
 </head>
 
 <body onload="start()">
 
 <h2><span id="logo">&#x2600;</span>SunSpider JavaScript Benchmark <small>(In Progress...)</small></h2>
-<h4>Version: @SUITE@</h4>
+<h3>Content Version: @SUITE@</h3>
 
 <script src="sunspider-test-prefix.js"></script>
 <script src="sunspider-test-contents.js"></script>
